# builder-bee

./: .gitignore  Cargo.toml  README.md  TODO.md  clean.sh
.github/workflows/: rust.yml
config/: Cargo.toml
config/src/: bbee_reader.rs  error.rs  lib.rs  reader.rs  typing.rs
examples/console-io/: bbee.toml
examples/console-io/main/src/: ConsoleIO.java
examples/error/: bbee.toml
examples/error/src/: Error.java
examples/gson/: bbee.toml
examples/gson/main/src/: Gson.java
examples/hello-world/: bbee.toml  bee.kt  bee.toml
examples/hello-world-kotlin/: bbee.toml
examples/hello-world/src/: HelloWorld.java
examples/local-project-dependency/: bbee.toml
examples/local-project-dependency/cool-print/: bbee.toml
examples/local-project-dependency/cool-print/src/: CoolPrint.java
examples/local-project-dependency/src/: Main.java
examples/single-file/: SingleFile.java  SingleFileWithDependencies.java
maven/: Cargo.toml
src/: bbee_reader.rs  bee_reader.rs  compile.rs  generic_result.rs  javac.rs  lib.rs  main.rs  main.ts  manifest.rs  spinner.rs  time.rs
src/cmd/: javac.rs  javarun.rs  kotlinc.rs  mod.rs  run.rs  runjar.rs
src/compilation/: compile.rs
src/config/: bbee_reader.rs  config_error.rs  error.rs  mod.rs
src/jar/: compile.rs  jar_name.rs  mod.rs  name.rs
src/maven/: resolver.rs
src/subcommands/: build.rs  classes.rs  clean.rs  find.rs  init.rs  mod.rs  run.rs  test.rs
task/: Cargo.toml
task/src/: lib.rs
tests/: compile_test.rs  dependency_test.rs
