[package]
name = "bbee"
version = "0.1.1"
authors = ["LeoDog896 <LeoDog896@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.13"
walkdir = "2"
toml = "0.4.2"
zip = "0.5.13"
serde = { version = "1.0.126", features = ["derive"] }
colored = "2"
spinners = "1.2.0"
thiserror = "1.0.29"
better-panic = "0.2.0"
relative-path = "1.5.0"
anyhow = "1.0.44"

[profile.release]
lto = "fat"
codegen-units = 1
